ingress/svc-pod-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-pod-1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: $2
spec:
  rules:
  - host: api-gateway.localdev
    http:
      paths:
      - path: /pod-1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: svc-pod-1
            port:
              number: 80
